--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import BaseHead from '../components/BaseHead.astro';
+import ZimbabweADR from '../assets/zimbabwe_adr.svg';
 import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
 import ProjectCard from '../components/projectCard.astro';
@@ -70,19 +71,19 @@ import { SITE_DESCRIPTION, SITE_TITLE } from '../consts';
 <section>
 	<ProjectCard  title="Zimbabwe ADR Surveilence System" 
 								description="The Zimbabwe Adverse Drug Reaction (ADR) Surveillance System aims to streamline the detection and reporting of medication side effects in Zimbabwe. This system will enable healthcare professionals and patients to report adverse reactions, allowing for swift identification and analysis of trends. By leveraging technology, this initiative seeks to improve patient safety, reduce healthcare costs, and enhance overall public health in Zimbabwe."
-								cover="zimbabwe_adr.svg"
+								Cover={ZimbabweADR}
 								/>
 	<ProjectCard  title="Pharmacometric Parameter Estimator" 
 								description="The Pharmacometric Parameter Estimator is an innovative tool designed to predict key pharmacokinetic and pharmacodynamic parameters from sparse or noisy data. This system utilizes advanced statistical models and machine learning algorithms to accurately estimate parameters such as absorption rates, distribution volumes, and elimination half-lives. By automating the estimation process, this tool aims to accelerate the development of new drugs and improve our understanding of how medications interact with the human body." 
-								cover="pharmacometric_parameter.svg"
+								Cover={ZimbabweADR}
 								/>
 	<ProjectCard  title="Zimbabwe Medicine Price Estimator" 
 								description="The Zimbabwe Medicine Price Estimator is an online platform that provides accurate and up-to-date pricing information for medicines in Zimbabwe. This system will help healthcare providers, patients, and policymakers make informed decisions about medication use, reducing financial burdens and improving access to essential treatments. By aggregating prices from various sources and analyzing market trends, this tool aims to promote transparency, efficiency, and cost-effectiveness in the country's pharmaceutical sector." 
-								cover="zimbabwe_medicine.svg"
+								Cover={ZimbabweADR}
 								/>
 	<ProjectCard  title="Dose Optimization Via Reinforcement Learning" 
 								description="This project applies reinforcement learning techniques to optimize medication dosing regimens for individual patients. The system uses real-world data and machine learning algorithms to learn from trial-and-error experiences, identifying the most effective dosages based on patient-specific factors such as age, weight, and medical history. By automating dose optimization, this initiative aims to improve treatment outcomes, reduce side effects, and enhance the overall quality of life for patients receiving medication therapy." 
-								cover="dose_optimization.svg"
+								Cover={ZimbabweADR}
 								/>
 </section>
 
