added pharmacokinetic par graph for data projects

--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import BaseHead from '../components/BaseHead.astro';
 import ZimbabweADR from '../assets/zimbabwe_adr.svg';
+import PharmacokineticPAR from '../assets/pharmacokinetic_par.svg'; 
 import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
 import ProjectCard from '../components/projectCard.astro';
@@ -75,7 +76,7 @@ import { SITE_DESCRIPTION, SITE_TITLE } from '../consts';
 								/>
 	<ProjectCard  title="Pharmacometric Parameter Estimator" 
 								description="The Pharmacometric Parameter Estimator is an innovative tool designed to predict key pharmacokinetic and pharmacodynamic parameters from sparse or noisy data. This system utilizes advanced statistical models and machine learning algorithms to accurately estimate parameters such as absorption rates, distribution volumes, and elimination half-lives. By automating the estimation process, this tool aims to accelerate the development of new drugs and improve our understanding of how medications interact with the human body." 
-								Cover={ZimbabweADR}
+								Cover={PharmacokineticPAR}
 								/>
 	<ProjectCard  title="Zimbabwe Medicine Price Estimator" 
 								description="The Zimbabwe Medicine Price Estimator is an online platform that provides accurate and up-to-date pricing information for medicines in Zimbabwe. This system will help healthcare providers, patients, and policymakers make informed decisions about medication use, reducing financial burdens and improving access to essential treatments. By aggregating prices from various sources and analyzing market trends, this tool aims to promote transparency, efficiency, and cost-effectiveness in the country's pharmaceutical sector." 
